<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".App.UI.Dashboard.Category.CategoryList.CategoryRingtones">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nadlay">

        <include
            android:id="@+id/header_layout"
            layout="@layout/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:id="@+id/rl_search_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/header_layout"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:background="@drawable/ringtone_bg">

            <ImageView
                android:id="@+id/ic_search"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginVertical="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />

            <!--            <SearchView-->
            <!--                android:id="@+id/searchView"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_centerVertical="true"-->
            <!--                android:background="@null"-->
            <!--                android:iconifiedByDefault="false"-->
            <!--                android:queryHint="Search Contacts"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textSize="16sp"-->
            <!--                android:textColorHint="@color/gray_color"-->
            <!--                />-->
            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_toEndOf="@+id/ic_search"
                android:background="@null"
                android:hint="@string/search"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_color"
                android:textSize="16sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_sounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_search_bar"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/pageProgress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:focusable="true"
            android:indeterminateTint="@color/white"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/rl_noDataFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/nodata" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/data_not_found"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt1"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/please_try_again_later_you_ll_get_better_response"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/no_search_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/no_search_data" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/ringtone_not_found"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </RelativeLayout>


    <include
        android:id="@+id/nadlay"
        layout="@layout/nad_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp" />

</RelativeLayout>